--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -122,8 +122,27 @@ body{
                 position: relative;
                 left: 0;
                 margin-bottom: 70px;
+                min-height: 250px;
                 img{
                     max-height: 385px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                #card1{
+                    left: 30%;
+                    animation-duration: .5s;
+                }
+                #card2{
+                    left: 20%;
+                    animation-duration: 1s;
+                }
+                #card3{
+                    left: 15%;
+                    animation-duration: 1.5s;
+                }
+                #card4{
+                    left: 5%;
+                    animation-duration: 2s;
                 }
             }
             &--title{
@@ -368,6 +387,38 @@ body{
                 font-weight: 500;
             }
         }
+        .bottom-text{
+            text-align: center;
+            &--img{
+                display: block;
+                text-align: left;
+                position: relative;
+                left: 0;
+                margin-bottom: 70px;
+                min-height: 250px;
+                img{
+                    max-height: 385px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                #card1{
+                    left: 30%;
+                    animation-duration: .5s;
+                }
+                #card2{
+                    left: 20%;
+                    animation-duration: 1s;
+                }
+                #card3{
+                    left: 15%;
+                    animation-duration: 1.5s;
+                }
+                #card4{
+                    left: 5%;
+                    animation-duration: 2s;
+                }
+            }
+        }
     }
     &--mid{
         padding-top: 180px;
@@ -556,6 +607,38 @@ body{
                 font-weight: 500;
             }
         }
+        .bottom-text{
+            text-align: center;
+            &--img{
+                display: block;
+                text-align: left;
+                position: relative;
+                left: 0;
+                margin-bottom: 70px;
+                min-height: 250px;
+                img{
+                    max-height: 385px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                #card1{
+                    left: 30%;
+                    animation-duration: .5s;
+                }
+                #card2{
+                    left: 20%;
+                    animation-duration: 1s;
+                }
+                #card3{
+                    left: 15%;
+                    animation-duration: 1.5s;
+                }
+                #card4{
+                    left: 5%;
+                    animation-duration: 2s;
+                }
+            }
+        }
     }
     &--mid{
         padding-top: 180px;
@@ -691,6 +774,38 @@ body{
                 line-height: 63px;
                 margin-bottom: 40px;
                 font-weight: 500;
+            }
+        }
+        .bottom-text{
+            text-align: center;
+            &--img{
+                display: block;
+                text-align: left;
+                position: relative;
+                left: 0;
+                margin-bottom: 70px;
+                min-height: 250px;
+                img{
+                    max-height: 385px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                #card1{
+                    left: 30%;
+                    animation-duration: .5s;
+                }
+                #card2{
+                    left: 20%;
+                    animation-duration: 1s;
+                }
+                #card3{
+                    left: 15%;
+                    animation-duration: 1.5s;
+                }
+                #card4{
+                    left: 5%;
+                    animation-duration: 2s;
+                }
             }
         }
     }
@@ -873,6 +988,38 @@ body{
                 line-height: 63px;
                 margin-bottom: 40px;
                 font-weight: 500;
+            }
+        }
+        .bottom-text{
+            text-align: center;
+            &--img{
+                display: block;
+                text-align: left;
+                position: relative;
+                left: 0;
+                margin-bottom: 70px;
+                min-height: 250px;
+                img{
+                    max-height: 385px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                #card1{
+                    left: 30%;
+                    animation-duration: .5s;
+                }
+                #card2{
+                    left: 20%;
+                    animation-duration: 1s;
+                }
+                #card3{
+                    left: 15%;
+                    animation-duration: 1.5s;
+                }
+                #card4{
+                    left: 5%;
+                    animation-duration: 2s;
+                }
             }
         }
     }
@@ -1086,9 +1233,10 @@ body{
         &-bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1180,10 +1328,10 @@ body{
                 }
             }
             .bottom-text--img{
-                margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1191,9 +1339,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1257,10 +1406,10 @@ body{
                 }
             }
             .bottom-text--img{
-                margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1268,9 +1417,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1334,9 +1484,10 @@ body{
             }
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1344,9 +1495,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1416,9 +1568,10 @@ body{
             }
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1426,9 +1579,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 110px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1520,9 +1674,10 @@ body{
         &-bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 220px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1632,9 +1787,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 220px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1704,9 +1860,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 220px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1775,9 +1932,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 220px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
@@ -1849,9 +2007,10 @@ body{
         &--bottom{
             .bottom-text--img{
                 margin-bottom: 20px;
+                min-height: 220px;
                 img{
-                    max-width: 100%;
-                    position: relative;
+                    max-width: 40%;
+                    position: absolute;
                     top: -20px;
                 }
             }
