--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@ body {
 }
 
 .collapsing {
-  display: none;
+  font-size: 23px;
+  line-height: 27px;
+  font-weight: 300;
 }
 
 /*bootstrap clasess rest */
@@ -213,32 +215,44 @@ body {
   padding-top: 100px;
   max-height: 530px;
 }
-#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card {
-  background-color: #262a2b;
-  border-radius: 50px;
-  text-align: left;
-  padding-top: 50px;
-  padding-left: 40px;
-  padding-right: 25px;
-  min-height: 550px;
-}
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner {
-  background-color: #262a2b;
   position: relative;
   width: 100%;
   height: 100%;
+  text-align: left;
+  min-height: 550px;
 }
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-front-text, #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+  background-color: #262a2b;
+  border-radius: 50px;
   position: absolute;
   width: 100%;
   height: 100%;
-  transition: all 0.5s;
+  padding-top: 50px;
+  padding-left: 40px;
+  padding-right: 25px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-front-text {
-  opacity: 1;
+  background-color: #262a2b;
 }
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
-  opacity: 0;
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .flip-effect:hover .card-front-text {
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .flip-effect:hover .card-back-text {
+  -webkit-transform: rotateY(0);
+  -ms-transform: rotateY(0);
+  transform: rotateY(0);
 }
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-icon {
   text-align: center;
@@ -310,12 +324,6 @@ body {
   font-size: 19px;
   line-height: 28px;
   font-weight: 300;
-}
-#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card:hover .card-front-text {
-  opacity: 0;
-}
-#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card:hover .card-back-text {
-  opacity: 1;
 }
 #cities-slider .cities-slider--city .city--new-york {
   background-image: url("https://jesusquev3311.github.io/master-landing/img/slider-new-york.png");
@@ -620,7 +628,7 @@ body {
 #services--mid {
   padding-top: 180px;
   padding-bottom: 40px;
-  background-image: url("../../img/footer-bg.png");
+  background-image: url("https://jesusquev3311.github.io/master-landing/img/footer-bg.png");
   background-position: center;
   background-size: cover;
 }
@@ -1250,6 +1258,9 @@ body {
   #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature img {
     max-height: 30px;
   }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+    transform: none;
+  }
 
   #travel .container-fluid {
     padding: 0;
@@ -1468,6 +1479,7 @@ body {
   #protection .protection-panel {
     position: relative;
     margin-bottom: 60px;
+    min-height: 200px;
   }
   #protection .protection-panel button {
     position: absolute;
@@ -1680,6 +1692,9 @@ body {
   }
   #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature img {
     max-height: 30px;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+    transform: none;
   }
 
   #travel .container-fluid {
