flip effect and responsive adjustments

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -1547,7 +1547,7 @@ body{
             position: absolute;
             left: 0;
         }
-        #protection--bottom .protection-panel button{
+        .protection-panel button{
             bottom: 0;
         }
         #protection--bottom .protection-panel--info{
