--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -203,6 +203,7 @@ body{
                 width: 100%;
                 left: 0;
                 top: 50%;
+                padding: 0 80px;
                 .arrow{
                     display: inline-block;
                     cursor: pointer;
@@ -218,7 +219,7 @@ body{
         &--bottom{
             background-color: $main-color;
             color: #fff;
-            padding-top: 100px;
+            padding-top: 80px;
             max-height: 530px;
             .cities-slider--city--bottom__card{
                 .card-inner{
@@ -2101,4 +2102,10 @@ body{
     }
     #home-top .card-wrapper{min-height: 600px;}
     #home-top{max-height: 550px;}
+    #travel--top .travel-banner{
+        min-height: 420px;
+    }
+    #travel .travel-panel--icon img{
+        max-height: 150px;
+    }
 }
