--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,9 @@ body {
 }
 
 /*Cities slider*/
+#cities-slider .card-back-text a {
+  color: #fff;
+}
 #cities-slider .cities-slider--city {
   position: relative;
   text-align: right;
