--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -58,6 +58,10 @@ body{
                         background-color: #3a3a3a;
                     }
                 }
+                .active{
+                    border-color: #fff;
+                    background-color: #3a3a3a;
+                }
             }
         }
     }
