add padding to home section in mobile

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -1274,7 +1274,7 @@ body{
                     padding: 0;
                     text-align: center;
                     &--group{
-                        padding: 50px 0;
+                        padding: 50px 10px;
                         &__title{
                         font-size: 25px !important;
                         line-height: 37px !important;
@@ -1726,7 +1726,7 @@ body{
                     padding: 0;
                     text-align: center;
                     &--group{
-                        padding: 50px 0;
+                        padding: 50px 10px;
                         &__title{
                         font-size: 25px !important;
                         line-height: 37px !important;
