--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,31 @@ body {
 #cities-slider .card-back-text a {
   color: #fff;
 }
+#cities-slider .card-back-text a.more-btn {
+  position: absolute;
+  padding: 10px 60px;
+  border-radius: 25px;
+  bottom: 30px;
+  left: 30%;
+  font-size: 21px;
+  line-height: 31px;
+  font-weight: 300;
+  text-transform: capitalize;
+  text-decoration: none;
+  background-color: #fff;
+  color: #181818;
+}
+#cities-slider .card-front-text button {
+  position: absolute;
+  padding: 10px 70px;
+  border-radius: 25px;
+  bottom: 30px;
+  left: 30%;
+  font-size: 21px;
+  line-height: 31px;
+  font-weight: 300;
+  text-transform: capitalize;
+}
 #cities-slider .cities-slider--city {
   position: relative;
   text-align: right;
@@ -1313,6 +1338,15 @@ body {
   }
   #cities .other-cities {
     font-size: 24px !important;
+  }
+  #cities #cities-slider .card-front-text button, #cities #cities-slider .card-back-text a {
+    font-size: 18px;
+    padding: 5px 60px;
+    bottom: 20px;
+    left: 25%;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-text {
+    font-size: 18px;
   }
 
   #travel .container-fluid {
