--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -13,6 +13,7 @@ body{
     position: relative;
     padding-top: 143px;
 }
+b{font-weight: 700;}
 .collapsing{
     font-size: 21px;
     line-height: 25px;
