--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -35,6 +35,11 @@ b{font-weight: 700;}
     .row{
         align-items: center;
     }
+    &__logo{
+        img{
+            max-height: 110px;
+        }
+    }
     &--nav-menu{
         display: flex;
         justify-content: flex-end;
@@ -135,20 +140,20 @@ b{font-weight: 700;}
                 margin-bottom: 70px;
                 min-height: 250px;
                 img{
-                    max-height: 385px;
+                    max-height: 245px;
                     position: absolute;
                     bottom: 0;
                 }
                 #card1{
-                    left: 30%;
+                    left: 74%;
                     animation-duration: 1s;
                 }
                 #card2{
-                    left: 20%;
+                    left: 51%;
                     animation-duration: 1.5s;
                 }
                 #card3{
-                    left: 15%;
+                    left: 28%;
                     animation-duration: 2s;
                 }
                 #card4{
@@ -396,6 +401,7 @@ b{font-weight: 700;}
     .cities-footer--logo{
         img{
             margin: 0 auto;
+            max-height: 100px;
         }
     }
 }
@@ -486,6 +492,7 @@ b{font-weight: 700;}
             }
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .travel-panel--info__text{
                 font-size: 21px;
@@ -560,6 +567,7 @@ b{font-weight: 700;}
             margin-bottom: 40px;
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .travel-panel--info__text{
                 font-size: 21px;
@@ -712,6 +720,7 @@ b{font-weight: 700;}
 
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .services-panel--info__text{
                 font-size: 21px;
@@ -760,6 +769,7 @@ b{font-weight: 700;}
             }
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .services-panel--info__text{
                 font-size: 21px;
@@ -871,6 +881,7 @@ b{font-weight: 700;}
             margin-bottom: 40px;
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .protection-panel--info__text{
                 font-size: 23px;
@@ -943,6 +954,7 @@ b{font-weight: 700;}
             margin-bottom: 40px;
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .protection-panel--info__text{
                 font-size: 21px;
@@ -1085,6 +1097,7 @@ b{font-weight: 700;}
             margin-bottom: 40px;
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .protection-panel--info__text{
                 font-size: 23px;
@@ -1157,6 +1170,7 @@ b{font-weight: 700;}
             margin-bottom: 40px;
             .col-3{
                 text-align: center;
+                max-width: 516px;
             }
             .collapse span, .show span, .protection-panel--info__text{
                 font-size: 21px;
@@ -1209,6 +1223,78 @@ b{font-weight: 700;}
                         height: 1px;
                         width: 118px;
                         background-color: #fff;
+                        position: absolute;
+                        left: 0;
+                        bottom: -20px;
+                        opacity: 0.5;
+                    }
+                }
+                &__text{
+                    margin-bottom: 40px;
+                }
+            }
+        }
+    }
+    &--bottom--white{
+        padding-top: 180px;
+        padding-bottom: 40px;
+        .benefits-panel{
+        
+            margin-bottom: 40px;
+            .col-3{
+                text-align: center;
+                max-width: 516px;
+            }
+            .collapse span, .show span, .protection-panel--info__text{
+                font-size: 23px;
+                line-height: 27px;
+                font-weight: 300;
+            }
+            .collapse{
+                border: none;
+            }
+            button{
+                border: none;
+                background-color: #fff;
+                display: block;
+                position: relative;
+                text-align: center;
+                width: 100%;
+                transition: all .5s;
+                &:before{
+                    content: '';
+                    height: 10px;
+                    width: 80%;
+                    background-color: $main-color;
+                    opacity: .1;
+                    position: absolute;
+                    top: 40%;
+                    left: 10%;
+                    border-radius: 50px;
+                }
+                &[aria-expanded="true"]{
+                    img{
+                        transform: rotate(0deg);
+                    }
+                }
+                img{
+                    max-height: 30px;
+                    transform: rotate(180deg);
+                }
+            }
+            &--info{
+                
+                &__title{
+                    font-size: 36px;
+                    line-height: 41px;
+                    font-weight: 500;
+                    margin-bottom: 40px;
+                    position: relative;
+                    &:after{
+                        content: '';
+                        height: 1px;
+                        width: 118px;
+                        background-color: $main-color;
                         position: absolute;
                         left: 0;
                         bottom: -20px;
